# stem_kernel

./: .gitignore  Makefile.am  README  README.rd  configure.ac
bpla_kernel/: Makefile.am  bpla_kernel.cpp  bpla_kernel.h  bpla_optimizer.cpp  bpmatrix.cpp  bpmatrix.h  data.cpp  data.h  la_main.cpp  main.cpp  rla-main.cpp  string_kernel.cpp
common/: Makefile.am  aaprofile.cpp  aaprofile.h  aln.cpp  aln.h  bpmatrix.cpp  bpmatrix.h  conv_kernel.h  cyktable.h  example.cpp  example.h  fa.cpp  fa.h  fasta.cpp  fasta.h  framework.cpp  framework.h  glob.h  glob_wrapper.h  input.cpp  input.h  kernel_matrix.cpp  kernel_matrix.h  maf.cpp  maf.h  pf_wrapper.cpp  pf_wrapper.h  profile.cpp  profile.h  rna.cpp  rna.h
libsvm/: Makefile.am  model.cpp  problem.cpp  problem.h  qmatrix.cpp  qmatrix.h  solver.cpp  solver.h  svm.cpp  svm.h  svm_util.cpp  svm_util.h
optimizer/: Makefile.am  gradient.cpp  gradient.h  lbfgsb.c  lbfgsb.h  optimizer.cpp  optimizer.h  poly_kernel.cpp  poly_kernel.h  poly_optimizer.cpp  rbf_kernel.cpp  rbf_kernel.h  rbf_optimizer.cpp  sigmoid_kernel.cpp  sigmoid_kernel.h  sigmoid_optimizer.cpp
rla_kernel/: Makefile.am  main.cpp  string_kernel.cpp  string_kernel.h
simpal/: Makefile.am  simpal.cpp
stem_kernel/: Makefile.am  allocator.h  dptable.h  lbfgs.c  lbfgs.h  lbfgsb.c  log_value.h  main.cpp  phmm.cpp  phmm.h  stem_kernel.cpp  stem_kernel.h  train.cpp
stem_kernel_lite/: Makefile.am  aln.cpp  aln.h  bpmatrix.cpp  bpmatrix.h  dag.cpp  dag.h  data.cpp  data.h  def_kernel.h  dptable.h  fa.cpp  fa.h  la-main.cpp  maf.cpp  main.cpp  model.cpp  model.h  pp-la-main.cpp  pp-main.cpp  ribosum.cpp  ribosum.h  score_table.cpp  score_table.h  ss_kernel.h  stem_kernel.cpp  stem_kernel.h  string_kernel.cpp  string_kernel.h
string_kernel/: Makefile.am  main.cpp  string_kernel.cpp  string_kernel.h
utils/: dishuffle.rb  dishuffle_aln.rb  dishuffle_fa.rb  dishuffle_fa_pos.rb  fa_sampling.rb  mean_id.cpp  normal.rb  normalize_matrix.rb  normalize_test_matrix.rb  radial_basis_matrix.rb  roc.rb  roc_cv.rb  roc_p.rb  submatrix.rb  submatrix_test.rb
