noinst_LIBRARIES = libcommon.a
libcommon_a_SOURCES = example.cpp example.h fasta.cpp fasta.h input.cpp input.h \
	pf_wrapper.cpp pf_wrapper.h rna.cpp rna.h framework.cpp framework.h glob_wrapper.h \
	bpmatrix.cpp bpmatrix.h fa.cpp fa.h maf.cpp maf.h aln.cpp aln.h profile.cpp profile.h \
	kernel_matrix.cpp kernel_matrix.h conv_kernel.h cyktable.h 
