bin_PROGRAMS = stem_kernel_lite
stem_kernel_lite_SOURCES = main.cpp stem_kernel.cpp score_table.cpp data.cpp ribosum.cpp string_kernel.cpp fa.cpp maf.cpp aln.cpp bpmatrix.cpp dag.cpp model.cpp
#stem_kernel_lite_LDADD = ../common/libcommon.a ../libsvm/libsvm.a ${BOOST_LIBS} 
stem_kernel_lite_LDADD = ../common/libcommon.a ${BOOST_LIBS} 
EXTRA_DIST = aln.h data.h model.h ss_kernel.h bpmatrix.h fa.h ribosum.h stem_kernel.h dag.h maf.h score_table.h string_kernel.h
